--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "name": "markdown-editor",
     "version": "1.0.0",
     "scripts": {
-        "start": "webpack-cli serve --mode development",
-        "build": "webpack --mode=production"
+        "start": "webpack serve --config ./webpack.config.js",
+        "build": "webpack --mode=development"
     },
     "dependencies": {
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6",
+        "@types/styled-components": "^5.1.9",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "styled-components": "^5.3.0",
         "ts-loader": "^9.2.2",
         "typescript": "^4.3.2",
         "webpack": "^5.38.1",
